trying to fix cross browser issue with flex-box and align-items property

--- a/css/styles.css
+++ b/css/styles.css
@@ -483,6 +483,7 @@ body {
    font-size: var(--font-h4);
    font-family: var(--fontFamily-primary);
    color: var(--text-dark);
+   object-fit: contain;
 }
 
 .product-collection-banner__title--color-light {
